@@ -1,5 +1,0 @@
-
-
-install (FILES unicode.map attribute_table.dtd
-    DESTINATION "doc"
-)
