@@ -1,5 +1,0 @@
-AUTOMAKE_OPTIONS=foreign no-dependencies
-
-EXTRA_DIST = \
-unicode.map \
-attribute_table.dtd
