@@ -6,6 +6,7 @@
 -- some make distcheck fixes (still broken)
 -- changed version to 2.10.0 and build to 123
 -- removed --enable-sourcefire and reformatted configure --help
+-- removed obsolete etc/ and its unicode.map and attribute_table.dtd
 
 123
 -- refactored documentation
